[API] update endpoint and build DI container
