# swagger/api_doc.yaml
@@ -2,7 +2,7 @@ swagger: "2.0"
 
 info:
   version: 1.0.0
-  title: Indexer Service
+  title: Twitter Scraper Service
   license:
     name: MIT
 
@@ -24,21 +24,83 @@ paths:
           description: Some message.
           in: path
           type: string
+          minLength: 1
+          maxLength: 64
+          pattern: '^\S{1,64}$'
           required: true
+        - name: limit
+          description: limit tweets.
+          in: query
+          type: integer
+          minimum: 0
+          maximum: 1000
+          default: 30
+          required: false
       responses:
         '200':
           description: 'Tweets by hashtag'
-  /user/twitter/{accountId}:
+          schema:
+            $ref: '#/definitions/Tweets'
+  /user/{username}:
     get:
       tags:
         - "Twitter"
       operationId: api.user.class_instance.get
       parameters:
-        - name: accountId
-          description: User account id.
+        - name: username
+          description: Twitter username.
           in: path
-          type: integer
+          type: string
+          pattern: '^\S{1,64}$'
+          minLength: 1
+          maxLength: 64
           required: true
+        - name: limit
+          description: limit tweets.
+          in: query
+          type: integer
+          minimum: 0
+          maximum: 1000
+          default: 30
+          required: false
       responses:
         '200':
           description: 'User tweets'
+          schema:
+            $ref: '#/definitions/Tweets'
+
+definitions:
+  Account:
+    type: object
+    properties:
+      fullname:
+        type: string
+      href:
+        type: string
+      id:
+        type: integer
+
+  Tweet:
+    type: object
+    properties:
+      account:
+        $ref: '#/definitions/Account'
+      date:
+        type: string
+      hashtags:
+        type: array
+        items:
+          type: string
+      likes:
+        type: integer
+      replies:
+        type: integer
+      retweets:
+        type: integer
+      text:
+        type: string
+
+  Tweets:
+    type: array
+    items:
+      $ref: '#/definitions/Tweet'
